调整项目androidx依赖

--- a/ijkplayer-java/build.gradle
+++ b/ijkplayer-java/build.gradle
@@ -21,6 +21,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar'])
 }
 
